Changelog
=========

4.9.2 (unreleased)
------------------

- Nothing changed yet.


4.9.1 (2021-02-12)
------------------

- Add Transifex.net service integration to manage the translation process.
  [macagua]

- Add Spanish translation
  [macagua]

- AjaxSave plugin, add message when nothing saved because nothing changed
  (Content already saved (nothing changed).)
  [gbastien]

- AjaxSave plugin, added `async:true` attribute so it is possible to set it
  to `async:false` and make sure content is saved before continuing.
  [gotcha, gbastien]


4.9.0 (2019-09-12)
------------------

- Update to CKEditor 4.12.1
  [gotcha]


4.8.3 (2018-11-13)
------------------

- AjaxSave plugin, defend against not traversable objects like plone.registry
  records
  [gotcha]


4.8.2 (2018-10-12)
------------------

- refactor AjaxSave plugin

  - fix for Archetypes
  - support for plone.app.contenttypes
  - support for formlib portlets

  [gotcha]


4.8.1 (2018-07-10)
------------------

- CKEditor language is coherent with edit view language
  [gotcha]
  


4.8.0 (2018-06-22)
------------------

- Update to CKEditor 4.9.2
  Include not enabled balloontoolbar plugin
  [gotcha]


4.7.2 (2017-12-15)
------------------

- Make `uploadimage` `resolveuid` links relative.
  [gotcha]


4.7.1 (2017-12-08)
------------------

- `uploadimage` support uses `resolveuid`.
  [gotcha]


4.7.0 (2017-12-01)
------------------

- Enable `uploadwidget` and `uploadimage` plugins.
  Corresponding upgrade step
  (Now depends on `plone.api`)
  [gotcha]


4.6.0 (2017-08-18)
------------------

- Update to CKEditor 4.7.2
  [gotcha]


4.5.0 (2017-02-24)
------------------

- Add a setting for CKEditor skin: colored or flat buttons

  Default skin remains Moonocolor, colored buttons.
  Flat buttons comes from the new Moono-lisa skin (see http://ckeditor.com/addon/moono-lisa)
  [gotcha]

  To avoid ugly border-bottom on buttons in default Plone 4 skin: add the
  following style to your CSS::
