@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+  <object name="ckeditor_properties" meta_type="Plone Property Sheet">
+    <property name="disallowedContent" type="text">
+        /* Add items to string of disallowedContent rules */
+        ''
+    </property>
+  </object>
+</object>
