@@ -4,7 +4,8 @@ Changelog
 4.9.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Add disallowedContent option to blacklist content.
+  [naro, gotcha]
 
 
 4.9.1 (2021-02-12)
